<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.TimeToWork.TimeToWork.Jobseeker.ViewJobDetailActivity">

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_apply_job"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorButtonGreen"
            android:text="@string/btn_apply_now" />

        <Button
            android:id="@+id/btn_cancel_job"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorButtonRed"
            android:text="@string/btn_cancel_job"
            android:visibility="gone" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_btn"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tv_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:fontFamily="@string/font_family_condensed"
                android:text="@string/example_job_title"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@string/font_family_regular"
                    android:maxLines="1"
                    android:maxWidth="144dp"
                    android:text="@string/example_company_name"
                    android:textSize="14sp" />

                <RatingBar
                    android:id="@+id/rate_bar_company"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.3"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tv_company_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@string/font_family_light"
                    android:text="@string/example_rate_value"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_posted_on"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <com.TimeToWork.TimeToWork.CustomClass.CategoryTagView
                    android:id="@+id/tag_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_light"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:minWidth="64dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tag_recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_label_tag_red"
                    android:fontFamily="@string/font_family_light"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:minWidth="64dp"
                    android:text="Recommended"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tag_fast_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_label_tag_light_yellow"
                    android:fontFamily="@string/font_family_light"
                    android:gravity="center"
                    android:minHeight="24dp"
                    android:minWidth="64dp"
                    android:text="Fast Payment"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_workplace_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/round_place_black_18"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_location"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_workplace_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="24dp"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_location"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_working_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/round_date_range_black_18"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_date"
                android:textSize="16sp" />

            <TextView
            android:id="@+id/tv_job_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:drawablePadding="6dp"
            android:drawableStart="@drawable/round_access_time_black_18"
            android:fontFamily="@string/font_family_light"
            android:text="@string/example_date"
            android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_wages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/round_attach_money_black_18"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_wage"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_requirements"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_job_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_job_requirement"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_job_description"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/string_note"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_job_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@string/font_family_light"
                android:text="@string/example_job_note"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
